Fixing Low language issues

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 node_modules/
-*.env
+.env
 # Expo
 .expo/
 dist/
@@ -10,6 +10,14 @@ web-build/
 expo-env.d.ts
 /keyFirebase.json
 /FirebaseConfig.ts
+
+ml/__pycache__/
+ml/*.pyc
+.env
+.env.local
+.env.*.local
+experiments
+
 # Native
 .kotlin/
 *.orig.*
