--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,4 @@
-EXPO_PUBLIC_CLOUDINARY_NAME=xxxxxxxxx
-EXPO_PUBLIC_CLOUDINARY_API_KEY=xxxxxxxxxxxxxxx
-EXPO_PUBLIC_CLOUDINARY_API_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxx
-EXPO_PUBLIC_FIREBASE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=XXXXXXXXXXXX
-EXPO_PUBLIC_FIREBASE_APP_ID=1:XXXXXXXXXXXX:web:XXXXXXXXXXXXXXXXXXXXXX
-EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+EXPO_PUBLIC_CLOUDINARY_NAME=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+EXPO_PUBLIC_CLOUDINARY_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+EXPO_PUBLIC_SUPABASE_URL = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+EXPO_PUBLIC_SUPABASE_ANON_KEY = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
